syntax = "proto3";

package answer;

import "google/protobuf/timestamp.proto";

option go_package = "proto/answer";

message Answer {
    int32 id = 1;
    int32 post_id = 2;
    string user_id = 3;
    string question = 4;
    string answer = 5;
    google.protobuf.Timestamp created_at = 6;
}

message CreateAnswerRequest {
    int32 post_id = 1;
    string user_id = 2;
    string question = 3;
    string answer = 4;
}

message CreateAnswerResponse {
    Answer answer = 1;
}

message FindAnswerByIDRequest {
    int32 id = 1;
}

message FindAnswerByIDResponse {
    Answer answer = 1;
}

message FindAllAnswersRequest {}

message FindAllAnswersResponse {
    repeated Answer answers = 1;
}

message FindAllAnswersByPostIDRequest {
    int32 post_id = 1;
}

message FindAllAnswersByPostIDResponse {
    repeated Answer answers = 1;
}

message FindAnswerByPostIDAndUserIDRequest {
    int32 post_id = 1;
    string user_id = 2;
}

message FindAnswerByPostIDAndUserIDResponse {
    repeated Answer answers = 1;
}

message FindAllAnswersByUserIDRequest {
    string user_id = 1;
}

message FindAllAnswersByUserIDResponse {
    repeated Answer answers = 1;
}

message DeleteAnswerRequest {
    int32 id = 1;
}

message DeleteAnswerResponse {
    string message = 1;
}

service AnswerService {
    rpc CreateAnswer(CreateAnswerRequest) returns (CreateAnswerResponse);
    rpc FindAnswerByID(FindAnswerByIDRequest) returns (FindAnswerByIDResponse);
    rpc FindAllAnswersByPostID(FindAllAnswersByPostIDRequest) returns (FindAllAnswersByPostIDResponse);
    rpc FindAnswerByPostIDAndUserID(FindAnswerByPostIDAndUserIDRequest) returns (FindAnswerByPostIDAndUserIDResponse);
    rpc FindAllAnswersByUserID(FindAllAnswersByUserIDRequest) returns (FindAllAnswersByUserIDResponse);
    rpc FindAllAnswers(FindAllAnswersRequest) returns (FindAllAnswersResponse);
    rpc DeleteAnswer(DeleteAnswerRequest) returns (DeleteAnswerResponse);
}